crates/codegen/src/snapshots/codegen__test__const_init.snap
---
source: crates/codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

@x = constant i32 233
@y = constant i32 234
