crates/codegen/src/snapshots/codegen__test__if_stmt.snap
---
source: crates/codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, ptr %x, align 4
  %x1 = load i32, ptr %x, align 4
  %gt = icmp sgt i32 %x1, 1
  br i1 %gt, label %then, label %else

then:                                             ; preds = %entry
  %x2 = load i32, ptr %x, align 4
  %gt3 = icmp sgt i32 %x2, 2
  br i1 %gt3, label %then4, label %else5

else:                                             ; preds = %entry
  store i32 6, ptr %x, align 4
  br label %merge

merge:                                            ; preds = %else, %merge6
  ret i32 0

then4:                                            ; preds = %then
  store i32 3, ptr %x, align 4
  br label %merge6

else5:                                            ; preds = %then
  %x7 = load i32, ptr %x, align 4
  %gt8 = icmp sgt i32 %x7, 3
  br i1 %gt8, label %then9, label %else10

merge6:                                           ; preds = %merge11, %then4
  br label %merge

then9:                                            ; preds = %else5
  store i32 4, ptr %x, align 4
  br label %merge11

else10:                                           ; preds = %else5
  store i32 5, ptr %x, align 4
  br label %merge11

merge11:                                          ; preds = %else10, %then9
  br label %merge6
}
