crates/codegen/src/snapshots/codegen__test__return_stmt.snap
---
source: crates/codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

define i32 @main() {
entry:
  %y = alloca i32, align 4
  %x = alloca i32, align 4
  store i32 233, ptr %x, align 4
  store i32 7, ptr %y, align 4
  %x1 = load i32, ptr %x, align 4
  %y2 = load i32, ptr %y, align 4
  %add = add i32 %x1, %y2
  ret i32 %add
}
